--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.48.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
+    "js-sha256": "^0.9.0",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {},
